<resources>
    <string name="app_name">MyWall</string>
    <!--日期选择空间-->
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="date_name">日期选择控件</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>

    <!--sign in/up-->
    <string name="sign_up_btn">注册</string>
    <string name="name">用户名</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="re_password">重复密码</string>
    <string name="sign_up_hint">已有账号，去登陆！</string>
    <string name="sign_in_btn">登录</string>
    <string name="name_email">用户名/邮箱</string>
    <string name="sign_in_hint">没有账号，去注册!</string>

    <!--font awesome图标-->
    <string name="topic_comment">{fa-comment-o}</string>
    <string name="topic_like_thumbs_o">{fa-thumbs-o-up}</string>
    <string name="topic_like_thumbs">{fa-thumbs-up}</string>

    <!--camera dialog-->
    <string name="dialog_camera">相机</string>
    <string name="dialog_native">本地</string>
    <string name="dialog_cancel">取消</string>

    <!--create topic delegate-->
    <string name="topic_content_hint">你想说什么......</string>
    <string name="topic_submit_btn">提交</string>
    <string name="topic_cancel_btn">返回</string>

    <!--delete image dialog-->
    <string name="dialog_delete">删除</string>
    <string name="dialog_not_delete">待定</string>

    <!--User Setting modal-->
    <string name="my_orders">我的订单</string>
    <string name="my_orders_all">全部订单</string>
    <string name="user_profile">用户信息</string>
    <string name="system_setting">系统设置</string>
    <string name="activity_account">活动账户</string>
    <string name="acitivity_pay">支付</string>
    <string name="user_location">用户地址</string>

    <!--User Activity Account-->
    <string name="activity_account_add">充值</string>
    <string name="activity_account_add_history">充值记录</string>
    <string name="activity_account_title">账户余额</string>
    <string name="activity_account_unit">金豆</string>

    <!--product-->
    <string name="product_search_hint">请输入关键字</string>
    <!--product detail-->
    <string name="goods_detail">商品详情</string>
    <string name="add_cart">加入购物车</string>
    <string name="shop_cart">购物车</string>
    <string name="like_goods">喜欢</string>

    <!--shop cart-->
    <string name="shop_cart_name">购物车</string>
    <string name="clear_cart_all">清空</string>
    <string name="clear_cart_select">删除</string>
    <string name="select_all">全选</string>
    <string name="total_price">合计</string>
    <string name="submit_order">结算</string>

    <!--order detail-->
    <string name="order_detail_title">订单详情</string>
    <string name="order_no">订单号</string>
    <string name="order_payment">合计</string>
    <string name="order_status">订单状态</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_pay">付款</string>

    <!--order list-->
    <string name="order_list_title">订单列表</string>

    <!--address list-->
    <string name="address_list_title">地址列表</string>
    <string name="address_name">姓名</string>
    <string name="address_phone">电话</string>
    <string name="address_mobile">手机</string>
    <string name="address_location">区域</string>
    <string name="address_detail">地址</string>
    <string name="address_zip">邮政</string>
    <string name="address_delete">删除</string>
    <string name="address_modify">修改</string>

    <string name="address_add">添加地址</string>

    <!--activity活动-->
    <string name="activity_list">活动列表</string>
    <string name="activity_my">我的活动</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_apply_time">报名时间</string>
    <string name="activity_time">活动时间</string>
    <string name="join_activity">加入活动</string>
    <string name="delete_activity">放弃活动</string>
    <string name="agree_join_activity">同意加入</string>
    <string name="create_activity">创建活动</string>
    <string name="nearby_user">附近的人</string>

</resources>
