<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1111"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/app_title"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/clear_cart_all"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/shop_cart_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_clear_selected"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/clear_cart_select"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap,RtlHardcoded" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shop_cart_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <android.support.v7.widget.ViewStubCompat
        android:id="@+id/stub_no_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@android:color/white"
        android:layout="@layout/stub_shop_cart_no_item"
        android:minHeight="50dp"
        android:orientation="horizontal" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:minHeight="50dp"
        android:orientation="horizontal">
        <!--全选图标-->
        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/shop_cart_select_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/icon_cart_select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="{fa-check-circle}"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_all"
                android:textColor="@color/app_title" />
        </android.support.v7.widget.LinearLayoutCompat>

        <!--合计部分-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_price"
                android:textColor="@android:color/darker_gray" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/shop_cart_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="￥"
                android:textColor="@color/app_title"
                android:textSize="20sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_cart_pay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_title"
            android:gravity="center"
            android:text="@string/submit_order"
            android:textColor="@android:color/black"
            android:textSize="20sp">

        </android.support.v7.widget.AppCompatTextView>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>