<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/delegate_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/app_title">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/delegate_tool_bar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/topic_comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/topic_content"
            android:gravity="top"
            android:hint="@string/topic_content_hint"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:minLines="6"
            android:scrollbars="vertical" />

        <com.labelwall.mywall.ui.widget.AutoPhotoLayout
            android:id="@+id/custom_auto_photo_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            android:layout_weight="2"
            android:background="@drawable/topic_content"
            app:icon_size="10sp"
            app:item_margin="3"
            app:line_count="4"
            app:max_count="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="right|center_vertical">

            <Button
                android:id="@+id/topic_submit_btn"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:text="@string/topic_submit_btn"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <Button
                android:id="@+id/topic_cancel_btn"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:text="@string/topic_cancel_btn"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>